# nitro-d

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: eval.ipynb  nitro_cnn.ipynb  nitro_mlp.ipynb
figures/: costs.ipynb  learning_dim.csv  plot_decay_and_dim.ipynb  plot_weights_magnitude.ipynb  run_learning_dim.ipynb  run_weight_decay.ipynb  weight_decay.csv
figures/res/: learning_dim.csv  weight_decay.csv
lib/: experiments.py
lib/blocks/: LocalConv2dBlock.py  LocalLinearBlock.py  LocalLossBlock.py
lib/layers/: activations.py  conv.py  linear.py  misc.py  modules.py  pooling.py
lib/models/: local_loss_models.py  models.py  sequential.py
lib/optim/: LRScheduler.py  Optimizer.py  lr_schedulers.py  optimizers.py
lib/utils/: data.py  enums.py  init.py  misc.py  nn.py  train.py
results/mlp_1_mnist/: results.csv  train.ipynb
results/mlp_2_fmnist/: results.csv  train.ipynb
results/mlp_3_fmnist/: results.csv  train.ipynb
results/mlp_3_mnist/: results.csv  train.ipynb
results/mlp_4_cifar10/: results.csv  train.ipynb
results/vgg11b_cifar10/: results.csv  train.ipynb
results/vgg8b_cifar10/: results.csv  train.ipynb
results/vgg8b_fmnist/: results.csv  train.ipynb
results/vgg8b_mnist/: results.csv  train.ipynb
